<resources>
    <string name="app_name">Cropchecker</string>

        <string name="home">Home</string>
        <string name="capture">Capture</string>
        <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="contact_support">Contact Support</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="choose_language">Choose Language</string>
    <string name="welcome_message">Plant Leaf Checker 𓆑</string>


    <string name="select_from_gallery">Select from Gallery</string>
    <string name="click_to_predict">Click to Predict</string>
    <string name="detect_crop_disease">Detect Crop Disease Here!🍃</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="history">History</string>
    <string name="upload_your_image_here">Upload your image here</string>
    <string name="quick_detection_better_protection">Quick Detection. Better Protection.</string>
    <string name="disease_name">Disease Name</string>
    <string name="timestamp">Timestamp</string>
    <!-- Login/Register -->
        <string name="sign_in">Sign In</string>
        <string name="sign_up">Sign Up</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="dont_have_account">Don’t have an account?</string>
        <string name="enter_email">Enter your email</string>
        <string name="enter_password">Enter your password</string>

</resources>