<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin"
    tools:context=".SignIn">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextEmailAddress"
        style="@style/LoginTextInputOuterStyle"
        android:layout_width="344dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"

        app:hintTextColor="@color/GREEN"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/GREEN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/LoginTextInputInnerStyle"
            android:layout_width="match_parent"
            android:id="@+id/emailET"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email">


        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword"
        style="@style/LoginTextInputOuterStyle"
        android:layout_width="344dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        app:hintTextColor="@color/GREEN"
        app:boxStrokeColor="@color/GREEN"
        android:inputType="textPassword"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/passEt"
            style="@style/LoginTextInputInnerStyle"
            android:layout_height="wrap_content"

            android:hint="@string/enter_password">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="311dp"
        android:paddingTop="5dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="79dp"
        android:textColor="@color/black"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="311dp"
        android:paddingTop="5dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/GREEN"
        android:text="@string/sign_in"
        android:textColor="@color/APPWHITE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="7dp"
        android:text="@string/dont_have_account"
        app:layout_constraintEnd_toStartOf="@+id/textSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="120dp"
        android:text="@string/sign_up"
        android:textColor="@color/GREEN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>